[gd_scene load_steps=12 format=3 uid="uid://bq8lcygm81vpr"]

[ext_resource type="Script" path="res://examples/example_7_different_agent_sizes/example_7_different_agent_sizes.gd" id="1_4j3iu"]
[ext_resource type="Texture2D" uid="uid://bcvf3q3x3tsuy" path="res://assets/textures/Dark/texture_04.png" id="1_ne6fr"]
[ext_resource type="Script" path="res://assets/free_look_camera.gd.gd" id="2_j4np8"]
[ext_resource type="Script" path="res://elements/navigation_manager.gd" id="3_uxawj"]
[ext_resource type="PackedScene" uid="uid://ckfc8tljefix" path="res://elements/character_bot/character_bot.tscn" id="4_ei5vb"]

[sub_resource type="NavigationMesh" id="NavigationMesh_jpptb"]
sample_partition_type = 1
geometry_parsed_geometry_type = 1
geometry_collision_mask = 1
agent_height = 3.5
agent_radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2xvjo"]
albedo_texture = ExtResource("1_ne6fr")
uv1_triplanar = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_t75go"]
energy_multiplier = 2.0

[sub_resource type="Sky" id="Sky_uus3n"]
sky_material = SubResource("ProceduralSkyMaterial_t75go")

[sub_resource type="Environment" id="Environment_6dnle"]
background_mode = 2
sky = SubResource("Sky_uus3n")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qegay"]
radius = 1.0
height = 3.5

[node name="Example7DifferentAgentSizes" type="Node3D"]
script = ExtResource("1_4j3iu")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="." groups=["nav_region"]]
navigation_mesh = SubResource("NavigationMesh_jpptb")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.461273, 0, -6.03938)
use_collision = true
size = Vector3(13.7192, 0.0478516, 16.4555)
material = SubResource("StandardMaterial3D_2xvjo")

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.453186, 1.84717, 2.09943)
use_collision = true
size = Vector3(13.641, 3.74219, 0.177858)
material = SubResource("StandardMaterial3D_2xvjo")

[node name="CSGBox3D10" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88833, 2.59585, -7.1746)
use_collision = true
size = Vector3(8.25122, 1.15423, 1.1963)
material = SubResource("StandardMaterial3D_2xvjo")

[node name="CSGBox3D11" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.457615, 1.00378, -7.1746)
use_collision = true
size = Vector3(1.55933, 2.04476, 1.1963)
material = SubResource("StandardMaterial3D_2xvjo")

[node name="CSGBox3D12" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.18579, 1.00378, -7.1746)
use_collision = true
size = Vector3(1.55933, 2.04476, 1.1963)
material = SubResource("StandardMaterial3D_2xvjo")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.999223, -1.56851e-08, 0.0394167, 0.0246724, 0.779874, 0.62545, -0.0307401, 0.625937, -0.779268, 0, 4.67302, -14.0666)
current = true
script = ExtResource("2_j4np8")
sensitivity = 6.0
default_velocity = 10.0
speed_scale = 3.0
boost_speed_multiplier = 1.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.400381, 0.916349, 0, -0.916349, -0.400381, 0, 9.7703, 9.47701)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6dnle")

[node name="NavigationManager" type="Node3D" parent="."]
script = ExtResource("3_uxawj")
camera_path = NodePath("../Camera3D")
character_bot_path = NodePath("../CharacterBotBig")

[node name="CharacterBot" parent="." node_paths=PackedStringArray("partroll_points") instance=ExtResource("4_ei5vb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.33529, 0.519412, 1.01941)
partroll_points = [NodePath("../Marker3D"), NodePath("../Marker3D2")]

[node name="CharacterBotBig" parent="." instance=ExtResource("4_ei5vb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.19214, 0.519412, -11.4388)
movement_speed = 8.0

[node name="bot" parent="CharacterBotBig" index="0"]
transform = Transform3D(-2, 0, 3.01992e-07, 0, 2, 0, -3.01992e-07, 0, -2, 0, -0.5, 0)

[node name="Skeleton3D" parent="CharacterBotBig/bot/Bot" index="0"]
bones/0/position = Vector3(0.278743, -0.327887, -93.2044)
bones/0/rotation = Quaternion(-0.685168, -0.269241, 0.248174, 0.629654)
bones/1/rotation = Quaternion(-0.0131637, 0.0403017, -0.00525147, 0.999087)
bones/2/rotation = Quaternion(0.0950819, 0.0819335, -0.00719608, 0.992066)
bones/3/rotation = Quaternion(0.152012, 0.0813491, -0.0119069, 0.984953)
bones/4/rotation = Quaternion(-0.0170684, -0.0106095, 0.00169992, 0.999797)
bones/5/rotation = Quaternion(-0.0713346, 0.177656, -0.00217867, 0.981501)
bones/7/rotation = Quaternion(0.481148, 0.533389, -0.567812, 0.401973)
bones/8/rotation = Quaternion(0.534622, -0.052606, 0.134958, 0.832586)
bones/9/rotation = Quaternion(-0.00646596, 0.0644957, 0.418386, 0.905954)
bones/10/rotation = Quaternion(-0.107318, 0.135916, 0.0120147, 0.984818)
bones/11/rotation = Quaternion(0.302619, -0.00635425, 0.150244, 0.941174)
bones/12/rotation = Quaternion(-0.00755885, 0.000372322, 0.000771393, 0.999971)
bones/15/rotation = Quaternion(0.0747058, -0.0036993, 0.0656505, 0.995035)
bones/16/rotation = Quaternion(0.204524, -0.0022608, 0.000581934, 0.978859)
bones/19/rotation = Quaternion(0.13468, 0.00321925, -0.0717354, 0.988284)
bones/20/rotation = Quaternion(0.201444, -0.00140704, 0.0154607, 0.979377)
bones/23/rotation = Quaternion(0.274195, -0.018824, -0.11755, 0.954277)
bones/24/rotation = Quaternion(0.287148, 0.00175581, 0.024821, 0.957563)
bones/27/rotation = Quaternion(0.301439, -0.0202254, -0.151295, 0.941188)
bones/28/rotation = Quaternion(0.347504, 0.0117127, 0.0497202, 0.936286)
bones/31/rotation = Quaternion(0.531024, -0.495456, 0.536181, 0.430172)
bones/32/rotation = Quaternion(0.51201, 0.0269588, 0.0978834, 0.852958)
bones/33/rotation = Quaternion(0.0603276, 0.0025066, -0.365397, 0.928891)
bones/34/rotation = Quaternion(0.116127, -0.0499149, -0.0960944, 0.987314)
bones/35/rotation = Quaternion(0.233994, 0.140536, -0.203907, 0.940169)
bones/36/rotation = Quaternion(-0.0427419, 0.00229613, 0.176063, 0.983448)
bones/39/rotation = Quaternion(0.0415578, 0.0104421, 0.00729602, 0.999055)
bones/40/rotation = Quaternion(0.146575, 0.000224549, 0.00989296, 0.98915)
bones/43/rotation = Quaternion(0.110904, 0.00856865, 0.0250497, 0.993478)
bones/44/rotation = Quaternion(0.306764, 0.00168006, -0.0207436, 0.951558)
bones/47/rotation = Quaternion(0.20881, -0.00671777, 0.0660143, 0.975702)
bones/48/rotation = Quaternion(0.341634, -0.00250777, -0.0356713, 0.939153)
bones/52/rotation = Quaternion(0.370153, -0.0130804, -0.0700267, 0.926235)
bones/55/rotation = Quaternion(0.0798652, 0.20961, 0.968892, -0.104569)
bones/56/rotation = Quaternion(0.309765, -0.120851, 0.0406585, -0.942225)
bones/57/rotation = Quaternion(0.57954, -0.0213755, -0.0281805, 0.814176)
bones/58/rotation = Quaternion(0.247745, -0.0179732, -0.0403825, 0.967817)
bones/60/rotation = Quaternion(-0.125331, 0.0077668, 0.983508, 0.130171)
bones/61/rotation = Quaternion(-0.289494, 0.0771677, -0.0165814, 0.95392)
bones/62/rotation = Quaternion(0.675894, 0.0712214, 0.0996905, 0.726743)

[node name="CollisionShape3D" parent="CharacterBotBig" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28393, 0)
shape = SubResource("CapsuleShape3D_qegay")

[node name="NavigationAgent3D" parent="CharacterBotBig" index="3"]
height = 3.5
radius = 1.0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3749, 0, -0.369216)

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3749, 0, -12.1469)

[editable path="CharacterBotBig"]
[editable path="CharacterBotBig/bot"]
